# ganymede-app

./: .env  .sentryclirc  CHANGELOG.md  README.md  biome.jsonc  components.json  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  tailwind-slot-plugin.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
.changeset/: 1_sixty-buckets-begin.md  afraid-boxes-sin.md  afraid-buses-sparkle.md  beige-ducks-nail.md  brave-fishes-train.md  calm-bikes-invent.md  calm-coats-tell.md  chilly-donuts-mix.md  chilly-snails-drive.md  cyan-onions-buy.md  eight-birds-scream.md  empty-poets-breathe.md  evil-lizards-obey.md  fair-toes-attack.md  famous-hornets-know.md  fluffy-cows-wink.md  fluffy-moons-punch.md  gold-dogs-fry.md  good-cameras-change.md  gorgeous-rabbits-occur.md  great-plums-tap.md  happy-impalas-compare.md  healthy-panthers-mix.md  hip-tools-deny.md  hungry-rivers-rule.md  hungry-toes-complain.md  late-moose-return.md  little-books-sit.md  long-wolves-own.md  nasty-garlics-rescue.md  ninety-impalas-return.md  odd-crews-notice.md  polite-cups-complain.md  proud-peaches-begin.md  rare-walls-argue.md  real-boats-perform.md  seven-impalas-leave.md  sharp-spies-dream.md  shiny-lobsters-drop.md  sixty-buckets-begin.md  (+6 more)
.github/workflows/: create-release-pr.yaml  on-release.yaml  on-relese.yaml
scripts/: changeset-update-versions.js
src/: app.tsx  i18n.ts  main.css  main.tsx  routeTree.gen.ts  title-bar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: almanax.rs  api.rs  conf.rs  error.rs  event.rs  first_start.rs  guides.rs  id.rs  image.rs  item.rs  json.rs  lib.rs  main.rs  quest.rs  security.rs  shortcut.rs  tauri_api.rs  tauri_api_ext.rs  update.rs
src-tauri/taurpc/: Cargo.toml  build.rs
src-tauri/taurpc/src/: export.rs  lib.rs
src/assets/fonts/: fonts.css
src/components/: almanax-frame.tsx  bottom-bar.tsx  change-step.tsx  copy-on-click.tsx  download-image.tsx  error-component.tsx  flag-per-lang.tsx  generic-loader.tsx  guide-card.tsx  guide-frame.tsx  image-with-origin.tsx  invisible-input.tsx  page-content.tsx  page-scrollable-content.tsx  page-title.tsx  position.tsx  select-lang.tsx  title-bar.tsx
src/components/icons/: discord-icon.tsx  twitter-icon.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  card.tsx  clear-input.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/hooks/: use_guide.ts  use_profile.ts  use_progress_step.ts  use_scroll_to_top.ts  use_step.ts  use_tabs.ts  use_webview_event.ts
src/ipc/: almanax.ts  bindings.ts  conf.ts  download.ts  guide_from_server.ts  guides.ts  guides_from_server.ts  id.ts  ipc.ts  is_app_old_version.ts  security.ts  update.ts
src/lib/: clamp.ts  conf.ts  copy-position.ts  date.ts  guide.ts  on-event.ts  profile.ts  progress.ts  rank.ts  search.ts  sentry.ts  tabs.ts  webview_event.ts
src/locales/en/: messages.po
src/locales/es/: messages.po
src/locales/fr/: messages.po
src/locales/pt/: messages.po
src/mutations/: download-guide-from-server.mutation.ts  open-guide-link.mutation.ts  open-guides-folder.mutation.ts  reset-conf.mutation.ts  set-conf.mutation.ts  set-downloaded-guides.mutation.ts  start-update.mutation.ts  toggle-guide-checkbox.mutation.ts
src/queries/: almanax.query.ts  available-guides.query.ts  conf.query.ts  downloads.query.ts  guides-from-server.query.ts  guides.query.ts  is_old_version.query.ts  progress.query.ts  version.query.ts  white_list.query.ts
src/routes/: -page.tsx  __root.tsx  _app.tsx  app-old-version.tsx  auto-pilot.tsx  guides.tsx  index.tsx  notes.create.tsx  notes.index.tsx  settings.tsx
src/routes/_app/: auto-pilot.tsx  index.tsx  notes.create.tsx  notes.index.tsx  settings.tsx
src/routes/_app/-settings/: profiles.tsx
src/routes/_app/dofusdb/: hunt.tsx  map.tsx
src/routes/_app/downloads/: $status.tsx  -back-button-link.tsx  index.tsx
src/routes/_app/guides/: $id.tsx  -guide-page.tsx  -guide-tabs-trigger.tsx  index.tsx
src/routes/downloads/: $status.tsx  -back-button-link.tsx  index.tsx
src/routes/guides/: $id.tsx  index.tsx
src/types/: almanax.ts  conf.ts  download.ts  guide.ts  profile.ts  status.ts  step.ts
