[package]
name = "ganymede"
version = "1.5.0"
description = "Dofus Ganymede app."
authors = ["Kiyozz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ganymede_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11.0", features = ["v6", "fast-rng"] }
tauri-plugin-http = "2.0.3"
serde_path_to_error = "0.1"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-global-shortcut = "2.0.1"
glob = "0.3.1"
chrono = "0.4.38"
semver = "1.0.23"
tauri-plugin-os = "2"
tauri-plugin-sentry = "0.2"
thiserror = "2.0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.0.2"
machine-uid = "0.5.3"
tauri-plugin-updater = "2"

[profile.release]
debug = true
