[package]
name = "ganymede"
version = "1.8.1"
description = "Dofus Ganymede app."
authors = ["Kiyozz"]
edition = "2021"
links = "https://ganymede-dofus.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ganymede_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[workspace]
members = [
  "taurpc",
  "taurpc/taurpc-macros"
]

[dependencies]
uuid = { version = "1.11.0", features = ["v6", "fast-rng"] }
tauri = { version = "2.1.1", features = ["macos-private-api"] }
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
specta-util = { version = "0.0.7", features = ["export"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.2.0"
serde_path_to_error = "0.1"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
glob = "0.3.1"
chrono = "0.4.39"
semver = "1.0.24"
tauri-plugin-os = "2.2.0"
tauri-plugin-sentry = "0.2"
thiserror = "2.0.6"
tauri-plugin-log = "2.2.0"
log = "^0.4"
taurpc = { path = "./taurpc", version = "0.3.2" }
tauri-plugin-opener = "2.2.1"
chrono-tz = "0.10.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.2.0"
machine-uid = "0.5.3"
tauri-plugin-updater = "2.3.0"
