[package]
name = "taurpc"
authors = ["MatsDK"]
version = "0.3.2"
edition = "2021"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []

[dependencies]
itertools = "0.13.0"
taurpc-macros = { path = "./taurpc-macros", version = "=0.3.2" }
tauri = { version = "2.1.1", features = ["macos-private-api"] }
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
specta-util = { version = "0.0.7", features = ["export"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta-serde = { version = "0.0.7", features = [] }
specta-typescript = { version = "0.0.7", features = ["function"] }
specta-macros = { version = "2.0.0-rc.17" }
